youfull/objects/Geo_Level_4__c.object
<CustomObject>
    <fields>
        <fullName>Geo_Level_3__c</fullName>
        <label>Geo Level 3</label>
        <referenceTo>Geo_Level_3__c</referenceTo>
        <relationshipLabel>Geo Level 4</relationshipLabel>
        <relationshipName>Geo_Level_4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geo_Level_4_Key__c</fullName>
        <externalId>true</externalId>
        <label>Geo Level 4 Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geo Level 4</label>
    <nameField>
        <label>Geo Level 4 Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Lead_00NF0000008gzQ3MAI</fullName>
        <active>true</active>
        <field>Lead.Geo_Level_4__c</field>
        <filterItems>
            <field>$Source.Geo_Level_3__c</field>
            <operation>equals</operation>
            <valueField>Geo_Level_4__c.Geo_Level_3__c</valueField>
        </filterItems>
        <filterItems>
            <field>Geo_Level_4__c.Name</field>
            <operation>equals</operation>
            <value>&apos;na&apos;</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_Postal Code</name>
        <sourceObject>Lead</sourceObject>
    </namedFilters>
    <pluralLabel>Geo Level 4</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>